# cda

./: .clang-format  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .qmake.cache.in  CMakeLists.txt  Doxyfile  README.md  cache_gen.pro  cda.pro  cda_checks.pri  cda_common.pri  setup.csh  setup.sh
apps/: CMakeLists.txt  apps.pro  console_app.pri  gui_app.pri  plugin_app.pri
apps/cda-caen-daq/: CMakeLists.txt  CaenDAQWindow.cxx  CaenDAQWindow.h  Constants.h  MainWindow.cxx  MainWindow.h  cda-caen-daq.pro  cda-caen-daq.qrc  main.cxx
apps/cda-caen-reader/: CMakeLists.txt  Crate.cxx  Crate.h  cda-caen-reader.pro  main.cxx
apps/cda-caen-vme-configurator/: CMakeLists.txt  Crate.cxx  Crate.h  main.cxx
apps/cda-caen-vme-daq/: CMakeLists.txt  CaenDAQWindow.cxx  CaenDAQWindow.h  Constants.h  MainWindow.cxx  MainWindow.h  cda-caen-vme-daq.qrc  main.cxx
apps/cda-caen-vme-reader/: CMakeLists.txt  Crate.cxx  Crate.h  main.cxx
apps/cda-caen-vme-terminal/: CMakeLists.txt  main.cxx
apps/cda-camac-daq/: CMakeLists.txt  CamacDAQWindow.cxx  CamacDAQWindow.h  Constants.h  MainWindow.cxx  MainWindow.h  SimpleDAQWindow.cxx  SimpleDAQWindow.h  cda-camac-daq.pro  cda-camac-daq.qrc  main.cxx
apps/cda-camac-reader/: CMakeLists.txt  Crate.cxx  Crate.h  cda-camac-reader.pro  main.cxx
apps/cda-config-editor/: CMakeLists.txt  ConfigEditorWindow.cxx  ConfigEditorWindow.h  cda-config-editor.pro  cda-config-editor.qrc  main.cxx
apps/cda-config-server/: CMakeLists.txt  cda-config-server.pro  main.cxx
apps/cda-glomem-writer/: CMakeLists.txt  Crate.cxx  Crate.h  GlomemWriter.cxx  GlomemWriter.h  cda-glomem-writer.pro  main.cxx
apps/cda-hbook-writer/: CMakeLists.txt  Crate.cxx  Crate.h  FileWriter.cxx  FileWriter.h  cda-hbook-writer.pro  main.cxx
apps/cda-init/: cda-init.pro  main.cxx
apps/cda-msgserver/: CMakeLists.txt  MsgServerWindow.cxx  MsgServerWindow.h  cda-msgserver.pro  cda-msgserver.qrc  main.cxx
apps/cda-qt-monitoring/: CMakeLists.txt  QtMonitoringWindow.cxx  QtMonitoringWindow.h  cda-qt-monitoring.pro  cda-qt-monitoring.qrc  main.cxx
apps/cda-raw-writer/: CMakeLists.txt  Crate.cxx  Crate.h  FileWriter.cxx  FileWriter.h  cda-raw-writer.pro  main.cxx
apps/cda-root-writer/: CMakeLists.txt  Crate.cxx  Crate.h  FileWriter.cxx  FileWriter.h  cda-root-writer.pro  main.cxx
apps/cda-simple-daq/: Constants.h  SimpleDAQWindow.cxx  SimpleDAQWindow.h  cda-simple-daq.pro  cda-simple-daq.qrc  main.cxx
apps/cda-stat-server/: CMakeLists.txt  StatServerWindow.cxx  StatServerWindow.h  cda-stat-server.pro  cda-stat-server.qrc  main.cxx
apps/common/: CMakeLists.txt  plugins.h  readConfig.cxx  readConfig.h
apps/win32/: plugins.h
core/: CMakeLists.txt  core.pro
core/caen/: Crate.h  Crate.icc  Digitizer.cxx  Digitizer.h  StopAcquisition.cxx  StopAcquisition.h  VME.cxx  VME.h  VmeBus.cxx  VmeBus.h  VmeBus_caen.cxx  VmeDevice.cxx  VmeDevice.h
core/camac/: Crate.cxx  Crate.h
core/cernlib/: HistMgr.cxx  HistMgr.h  NTupleMgr.cxx  NTupleMgr.h
core/cmdl/: README  argiter.cpp  cmdarg.cpp  cmdargs.cpp  cmdargs.h  cmdline.cpp  cmdline.h  dump.cpp  fifolist.cpp  fifolist.h  parse.cpp  private.cpp  states.h  strindent.cpp  unix.cpp  usage.cpp
core/common/: Address.cxx  Address.h  BinaryStream.cxx  BinaryStream.h  BinaryStream_common.cxx  CDAVersion.h.in  Export.h  QStringCompat.h  SharedPtr.h  Sleep.cxx  Sleep.h  Socket.cxx  Socket.h  StatusCode.cxx  StatusCode.h  UniquePtr.h  errorcheck.h
core/device/: CaenDigitizerGui.cxx  CaenDigitizerGui.h  CaenGui.cxx  CaenGui.h  CaenReadout.h  CaenVmeGui.cxx  CaenVmeGui.h  CamacGui.cxx  CamacGui.h  CamacReadout.h  CernlibDisk.h  CernlibHist.h  Config.h  Crate.h  Crate.icc  Device.h  Disk.h  Factory.h  Factory.icc  Gui.cxx  Gui.h  Hist.h  ICaenDigitizerReadout.h  ICaenVmeConfigurable.h  ICaenVmeReadout.h  ICamacReadout.h  ICernlibDisk.h  ICernlibHist.h  IConfig.h  IDevice.h  IRootDisk.h  IVmeReadout.h  Loader.cxx  Loader.h  QtHist.cxx  QtHist.h  Readout.h  RootDisk.h  VmeGui.cxx  VmeGui.h  (+1 more)
core/event/: BinaryStream.cxx  BinaryStream.h  BinaryStream_ev.cxx  Event.cxx  Event.h  EventServer.cxx  EventServer.h  Fragment.cxx  Fragment.h  IncompleteEvent.h  Sender.h  Sender_ev.cxx  TextStream.cxx  TextStream.h  TextStream_ev.cxx
core/fifo/: Fifo.cxx  Fifo.h
core/i18n/: Loader.cxx  Loader.h  Loader_i18n.cxx
core/msg/: Address.cxx  Address.h  BinaryStream.cxx  BinaryStream.h  Level.h  Logger.cxx  Logger.h  Message.cxx  Message.h  MsgTime.cxx  MsgTime.h  Sender.cxx  Sender.h  Sender_msg.cxx  Server.cxx  Server.h  Server_msg.cxx  Socket.cxx  Socket.h  TextStream.cxx  TextStream.h  TextStream_msg.cxx
core/net/: NetElements.cxx  NetElements.h
core/root/: NTupleMgr.cxx  NTupleMgr.h  NTupleMgr.icc  NTupleMgr_root.cxx
core/tclap/: Arg.h  ArgException.h  ArgTraits.h  CmdLine.h  CmdLineInterface.h  CmdLineOutput.h  Constraint.h  DocBookOutput.h  HelpVisitor.h  IgnoreRestVisitor.h  MultiArg.h  MultiSwitchArg.h  OptionalUnlabeledTracker.h  StandardTraits.h  StdOutput.h  SwitchArg.h  UnlabeledMultiArg.h  UnlabeledValueArg.h  ValueArg.h  ValuesConstraint.h  VersionVisitor.h  Visitor.h  XorHandler.h  ZshCompletionOutput.h
core/vme/: VmeBus.cxx  VmeBus.h  VmeBus_pcivme.cxx
curses/: CMakeLists.txt
curses/msg/: TermWindowView.cxx  TermWindowView.h
daq/: CMakeLists.txt  daq.pro
daq/common/: AppRunner.cxx  AppRunner.h  Export.h  PathResolver.cxx  PathResolver.h
daq/config/: ConfReader.cxx  ConfReader.h  ConfServer.cxx  ConfServer.h  Crate.cxx  Crate.h
daq/moni/: AxisStyleAction.cxx  AxisStyleAction.h  Histogram.cxx  Histogram.h
daq/schema/: Application.cxx  Application.h  CamacReader.cxx  CamacReader.h  Config.h
daq/stat/: BinaryStream.cxx  BinaryStream.h  Sender.cxx  Sender.h  Server.cxx  Server.h  Statistics.cxx  Statistics.h
devices/: CMakeLists.txt  devices.pri  devices.pro
devices/ad1000/: Ad1000Factory.cxx  Ad1000Factory.h  CMakeLists.txt  CernlibDisk.cxx  CernlibDisk.h  CernlibHist.cxx  CernlibHist.h  ChannelConfig.cxx  ChannelConfig.h  ChannelGui.cxx  ChannelGui.h  (+17 more)
gui/: CMakeLists.txt  gui.pro  gui.qrc
tui/: CMakeLists.txt
(+405 files in other folders)
